--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,11 @@
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
-    <header class="page-header" role="banner">
+    <header class="page-header" role="banner" 
+    {% if site.background-image %}
+       style="background: url(http://sf6-tccdn-tos.pstatp.com/obj/tuchong-avatar/h_2301626_1)"
+    {% endif %} 
+    >
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
