--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     <header class="page-header" role="banner" 
     {% if site.background-image %}
-       style="background: url({{site.background-image}})"
+       style="background-image: url({{site.background-image}})"
     {% endif %} 
     >
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
@@ -40,6 +40,10 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
+
+      {% if site.include %}
+      {% include {{ site.include }} %}
+      {% endif %}
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
