--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
           
           {% for image in site.images %}
           <div class="post-photo J-post-photo"
-            style="height: 485px; width: 727px; margin-bottom: 12px; display: inline-block; margin-left: 12px;">
+            style="height: 485px; width: 45rem; margin-bottom: 12px; display: inline-block; margin-left: 12px;">
             <div
               style="background-color: rgb(191, 176, 129); width: 100%; height: 100%; background-size: cover; background-image: url(&quot;{{image.src}}&quot;); background-position: center center; background-repeat: no-repeat no-repeat;">
             </div>
