--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@
       {{ content }}
 
       <!-- tuchong‘s page-content -->
-      {% if site.include.enable %}
+      <!-- {% if site.include.enable %}
       {% include {{ site.include.html }} %}
-      {% endif %}
+      {% endif %} -->
 
 
       {% if site.images %}
