--- a/_sass/tuchong.scss
+++ b/_sass/tuchong.scss
@@ -1,3 +1,23 @@
+@import "variables";
+
+@mixin large {
+  @media screen and (min-width: #{$large-breakpoint}) {
+    @content;
+  }
+}
+
+@mixin medium {
+  @media screen and (min-width: #{$medium-breakpoint}) and (max-width: #{$large-breakpoint}) {
+    @content;
+  }
+}
+
+@mixin small {
+  @media screen and (max-width: #{$medium-breakpoint}) {
+    @content;
+  }
+}
+
 .pagelist-wrapper {
     font-size: 0;
     margin: 40px;
