--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,46 @@
         $(this).css('opacity', '0');
       });
   })
+</script>
 
-  // 其他
+<!-- photoswipe -->
+<link href="https://cdn.bootcss.com/photoswipe/4.1.3/photoswipe.min.css" rel="stylesheet">
+<script src="https://cdn.bootcss.com/photoswipe/4.1.3/photoswipe.min.js"></script>
+<script src="https://cdn.bootcss.com/photoswipe/4.1.3/photoswipe-ui-default.min.js"></script>
+<link href="https://cdn.bootcss.com/photoswipe/4.1.3/default-skin/default-skin.min.css" rel="stylesheet">
+
+<script>
+  // photoswipe
   $(document).ready(function () {
-    let a = `{{site.images}}`;
-    console.log(a);
+    // let a = `{{site.images}}`; // {"title"=>"爱人", "src"=>"https://photo.tuchong.com/2301626/ft640/209322359.jpg"}{"title"=>"爱人", "src"=>"https://photo.tuchong.com/2301626/ft640/218693985.jpg"}{"title"=>"爱人", "src"=>"https://photo.tuchong.com/2301626/ft640/209322359.jpg"}{"title"=>"爱人", "src"=>"https://photo.tuchong.com/2301626/ft640/209322359.jpg"}{"title"=>"漫展", "src"=>"https://photo.tuchong.com/2301626/ft640/559284591.jpg"}{"title"=>"爱人", "src"=>"https://photo.tuchong.com/2301626/ft640/559284591.jpg"}{"title"=>"漫展", "src"=>"https://photo.tuchong.com/2301626/ft640/559284591.jpg"}{"title"=>"漫展", "src"=>"https://photo.tuchong.com/2301626/ft640/559284591.jpg"}
+    // console.log(a);
 
+    let images = `{{site.images | jsonify}}`; // [{"title":"爱人","src":"https://photo.tuchong.com/2301626/ft640/209322359.jpg"},{"title":"爱人","src":"https://photo.tuchong.com/2301626/ft640/218693985.jpg"},{"title":"爱人","src":"https://photo.tuchong.com/2301626/ft640/209322359.jpg"},{"title":"爱人","src":"https://photo.tuchong.com/2301626/ft640/209322359.jpg"},{"title":"漫展","src":"https://photo.tuchong.com/2301626/ft640/559284591.jpg"},{"title":"爱人","src":"https://photo.tuchong.com/2301626/ft640/559284591.jpg"},{"title":"漫展","src":"https://photo.tuchong.com/2301626/ft640/559284591.jpg"},{"title":"漫展","src":"https://photo.tuchong.com/2301626/ft640/559284591.jpg"}]
+    console.log(images);
 
-    let b = `{{site.images | jsonify}}`;
-    console.log(b);
+    let openPhotoSwipe = function (index) {
+      let pswpElement = document.querySelectorAll('.pswp')[0];
+
+      // build items array
+      let items = JSON.parse(images);
+      // define options (if needed)
+      var options = {
+        // history & focus options are disabled on CodePen        
+        history: false,
+        focus: false,
+        index,
+        showAnimationDuration: 0,
+        hideAnimationDuration: 0
+      };
+
+      var gallery = new PhotoSwipe(pswpElement, PhotoSwipeUI_Default, items, options);
+      gallery.init();
+    };
+
+    $('.J-post-photo').click(function (event) {
+      // console.log($(this).index());
+      openPhotoSwipe($(this).index());
+    });
   })
 </script>
 
@@ -112,3 +143,58 @@
     </main>
   </body>
 </html>
+
+
+<!-- Root element of PhotoSwipe. Must have class pswp. -->
+<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+  <!-- Background of PhotoSwipe. 
+         It's a separate element, as animating opacity is faster than rgba(). -->
+  <div class="pswp__bg"></div>
+  <!-- Slides wrapper with overflow:hidden. -->
+  <div class="pswp__scroll-wrap">
+    <!-- Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory. -->
+    <!-- don't modify these 3 pswp__item elements, data is added later on. -->
+    <div class="pswp__container">
+      <div class="pswp__item"></div>
+      <div class="pswp__item"></div>
+      <div class="pswp__item"></div>
+    </div>
+    <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+    <div class="pswp__ui pswp__ui--hidden">
+
+      <div class="pswp__top-bar">
+
+        <!--  Controls are self-explanatory. Order can be changed. -->
+
+        <div class="pswp__counter"></div>
+
+        <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+        <!-- <button class="pswp__button pswp__button--share" title="Share"></button> -->
+        <!-- <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button> -->
+
+        <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+        <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
+        <!-- element will get class pswp__preloader--active when preloader is running -->
+        <div class="pswp__preloader">
+          <div class="pswp__preloader__icn">
+            <div class="pswp__preloader__cut">
+              <div class="pswp__preloader__donut"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+        <div class="pswp__share-tooltip"></div>
+      </div>
+      <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+      </button>
+      <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+      </button>
+      <div class="pswp__caption">
+        <div class="pswp__caption__center"></div>
+      </div>
+    </div>
+  </div>
+</div>
