--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -190,8 +190,8 @@
       </button>
       <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
       </button>
-      <div class="pswp__caption" style="text-align: center;">
-        <div class="pswp__caption__center"></div>
+      <div class="pswp__caption">
+        <div class="pswp__caption__center" style="text-align: center;"></div>
       </div>
     </div>
   </div>
